syntax = "proto3";

package proto;

service Email {
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {};
}

// SMTP类型
enum SMTPStrategy {
    QQ = 0;
}

message SendEmailRequest {
    // SMTP
    SMTPStrategy strategy = 1;
    // 标题
    string title = 2;
    // 内容
    string body = 3;
    // 收件人列表
    repeated string recipientList = 4;
}

message SendEmailResponse {
    int64 code = 1;
}